--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </ul>
 
                     <ul class="navbar-nav nav-btn ms-auto">
-                        <li><a href="#">Registration</a></li>
+                        <li><a href="registration.html">Registration</a></li>
                     </ul>
                 </div>
             </nav>
@@ -73,15 +73,16 @@
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <ul class="navbar-nav">
-                <li><a href="#" id="active">Home</a></li>
-                <li><a href="#section1" class="nav-link">All Courses</a></li>
-                <li><a href="#" class="nav-link">About us</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul class="navbar-nav ms-auto" id="main-nav">
+                <li><a href="#section1" class="nav-link">Home</a></li>
+                <li><a href="#section2" class="nav-link">All Courses</a></li>
+                <li><a href="#section3" class="nav-link">About us</a></li>
+                <li><a href="#section4" class="nav-link">Gallery</a></li>
+                <li><a href="#section5" class="nav-link">Contact</a></li>
             </ul>
-            <ul class="navbar-nav nav-btn">
-                <li><a href="#">Registration</a></li>
+
+            <ul class="navbar-nav nav-btn ms-auto">
+                <li><a href="registration.html">Registration</a></li>
             </ul>
         </div>
     </div>
