--- a/index.html
+++ b/index.html
@@ -262,33 +262,54 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit perferendis, eaque odio nemo placeat
                     sapiente aspernatur corrupti in </p>
             </div>
-            <div class="course-main">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas,elit. In quia id recusandae
-                consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis. voluptates minus quisquam neque
-                reiciendis.
+            <div class="gallery-main">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-4.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-6.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-7.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-8.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="gallery-item">
+                            <img src="images/gallery-9.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -302,49 +323,50 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit perferendis, eaque odio nemo placeat
                     sapiente aspernatur corrupti in </p>
             </div>
-            <div class="course-main">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas,elit. In quia id recusandae
-                consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis.elit. In quia id recusandae consectetur dolorum
-                quidem commodi, unde, hic labore atque a quo. Beatae assumenda quas, voluptates minus quisquam neque
-                reiciendis. voluptates minus quisquam neque
-                reiciendis.
+            <div class="contact-main">
+                <div class="row">
+                    <div class="col-lg-6 order-2 order-lg-1">
+                        <div class="contact-left pe-xl-4">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.5207211090346!2d90.01423631484683!3d25.016396745151134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3757d74e0498365f%3A0x7dcc940d3254f5ec!2sShahid%20Abdur%20Rashid%20Memorial%20Academy!5e0!3m2!1sen!2sbd!4v1637409336182!5m2!1sen!2sbd"
+                                allowfullscreen=""></iframe>
+                            <ul>
+                                <li><i class="fas fa-map-marker-alt"></i> <strong>Address: </strong>Sherpur, Bangladesh
+                                </li>
+                                <li><i class="far fa-envelope"></i> <strong>Email: </strong><a
+                                        href="mailto: ait.sherpur@gmail.com">ait.sherpur@gmail.com</a></li>
+                                <li><i class="fas fa-phone-alt"></i> <strong>Phone: </strong><a
+                                        href="tel: 01718067882">01718067882</a></li>
+                                <li><i class="fas fa-globe"></i> <strong>Website: </strong><a
+                                        href="http://www.ait.edu.bd/">ait.edu.bd</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-1 order-lg-2">
+                        <div class="contact-right">
+                            <form action="#">
+                                <input type="text" placeholder="Name">
+                                <input type="email" placeholder="Email">
+                                <input type="text" placeholder="Subject">
+                                <textarea name="" id="" cols="30" rows="5" placeholder="Message"></textarea>
+                                <button type="submit"> Send Message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <!-- contact-area end -->
 
+    <!-- footer-area start -->
+    <footer class="footer-area">
+        <div class="container">
 
-
-
-
-
-
-
-
-
-
-
+        </div>
+    </footer>
+    <!-- footer-area end -->
 
 
 
