--- a/registration.html
+++ b/registration.html
@@ -45,7 +45,7 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto" id="main-nav">
-                        <li><a href="#section1" class="nav-link">Home</a></li>
+                        <li><a href="index.html" class="nav-link">Home</a></li>
                         <li><a href="#section2" class="nav-link">All Courses</a></li>
                         <li><a href="#section3" class="nav-link">About us</a></li>
                         <li><a href="#section4" class="nav-link">Gallery</a></li>
@@ -74,7 +74,7 @@
         </div>
         <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto" id="main-nav">
-                <li><a href="#section1" class="nav-link">Home</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="#section2" class="nav-link">All Courses</a></li>
                 <li><a href="#section3" class="nav-link">About us</a></li>
                 <li><a href="#section4" class="nav-link">Gallery</a></li>
