--- a/registration.html
+++ b/registration.html
@@ -31,10 +31,10 @@
     <!--[if lte IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p><![endif]-->
 
     <!-- header-area start -->
-    <header class="header-area" id="section1">
+    <header class="header-area">
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -45,9 +45,9 @@
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav ms-auto" id="main-nav">
-                        <li><a href="index.html" class="nav-link">Home</a></li>
-                        <li><a href="#section2" class="nav-link">All Courses</a></li>
-                        <li><a href="#section3" class="nav-link">About us</a></li>
+                        <li><a href="index.html" class="nav-link .section1">Home</a></li>
+                        <li><a href="#section2" class="nav-link">Course</a></li>
+                        <li><a href="#section3" class="nav-link">About </a></li>
                         <li><a href="#section4" class="nav-link">Gallery</a></li>
                         <li><a href="#section5" class="nav-link">Contact</a></li>
                     </ul>
@@ -75,8 +75,8 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto" id="main-nav">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="#section2" class="nav-link">All Courses</a></li>
-                <li><a href="#section3" class="nav-link">About us</a></li>
+                <li><a href="#section2" class="nav-link">Course</a></li>
+                <li><a href="#section3" class="nav-link">About</a></li>
                 <li><a href="#section4" class="nav-link">Gallery</a></li>
                 <li><a href="#section5" class="nav-link">Contact</a></li>
             </ul>
@@ -94,55 +94,17 @@
             <div class="register-form">
                 <h2>Registration Form</h2>
                 <form action="#" method="POST">
-                    <div class="upload-btn text-center">
-                        <div class="upload-btn-wrapper">
-                            <button class="filebtn">
-                                <img src="images/avatar-man.png" alt="">
-                            </button>
-                            <input type="file" name="myfile" />
-                        </div>
-                    </div>
                     <div class="form-info">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <input type="text" placeholder="First Name">
-                            </div>
-                            <div class="col-md-6">
-                                <input type="text" placeholder="Last Name">
-                            </div>
-                        </div>
-                        <input type="text" placeholder="Username">
+                        <input type="text" placeholder="Name">
                         <input type="email" placeholder="Email">
-                        <input type="tel" placeholder="Phone">
-                        <input type="text" placeholder="Date of birth">
+                        <input type="tel" placeholder="Contact">
                         <select name="" id="">
                             <option value="">Select Course</option>
                             <option value="">Office Application</option>
                             <option value="">Web Design</option>
                             <option value="">Web Development</option>
                         </select>
-                        <div class="radio-button-opt">
-                            <p>Select Your Gender : </p>
-                            <div class="radio-button">
-                                <label for="male">Male</label>
-                                <input type="radio" id="male" name="gender" checked>
-                            </div>
-                            <div class="radio-button radio2">
-                                <label for="female">Female</label>
-                                <input type="radio" id="female" name="gender">
-                            </div>
-                        </div>
-                        <div class="radio-button-opt">
-                            <p>Do you have any experience?</p>
-                            <div class="radio-button">
-                                <label for="yes">Yes</label>
-                                <input type="radio" id="yes" name="exper">
-                            </div>
-                            <div class="radio-button radio2">
-                                <label for="no">No</label>
-                                <input type="radio" id="no" name="exper">
-                            </div>
-                        </div>
+
                         <textarea name="" id="" cols="30" rows="5" placeholder="Enter Your Full Address"></textarea>
                         <button type="submit">Submit</button>
                     </div>
@@ -155,7 +117,47 @@
     <!-- footer-area start -->
     <footer class="footer-area">
         <div class="container">
-
+            <div class="row">
+                <div class="col-md-6 col-lg-3 order-md-1">
+                    <div class="footer-item">
+                        <a href="index.html">
+                            <img class="footer-logo" src="images/logo.png" alt="">
+                        </a>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse consectetur tempora
+                            debitisdolorem Molestiae </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 order-md-3 order-lg-2">
+                    <div class="footer-item ps-xl-5">
+                        <h4>About Us</h4>
+                        <ul>
+                            <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal">Terms and
+                                    Conditions</a></li>
+                            <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">Privacy Policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 order-md-4 order-lg-3">
+                    <div class="footer-item">
+                        <h4>Follow Us</h4>
+                        <ul class="social-icon">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-skype"></i></a></li>
+                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 order-md-2 order-lg-4">
+                    <div class="footer-item">
+                        <img src="images/payment-method.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="copyright-part">
+                <p>Copyright © 2021 All right reserved ait.edu.bd</p>
+            </div>
         </div>
     </footer>
     <!-- footer-area end -->
