single-page-end

--- a/registration.html
+++ b/registration.html
@@ -131,9 +131,9 @@
                     <div class="footer-item ps-xl-5">
                         <h4>About Us</h4>
                         <ul>
-                            <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal">Terms and
+                            <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-4">Terms and
                                     Conditions</a></li>
-                            <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">Privacy Policy</a>
+                            <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-5">Privacy Policy</a>
                             </li>
                         </ul>
                     </div>
@@ -162,19 +162,153 @@
     </footer>
     <!-- footer-area end -->
 
+    <!-- terms-condition-modal start -->
+    <section class="terms-condition-modal">
+        <div class="container">
+            <div class="modal-main">
+                <div class="modal fade modal-bg" id="modal-4" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Terms and Conditions</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita obcaecati aut
+                                    aspernatur, assumenda illum, quo sequi suscipit, nisi vero nihil amet eligendi.
+                                    Pariatur adipisci, sequi rerum obcaecati voluptates dolore dolores?Lorem ipsum dolor
+                                    sit amet consectetur adipisicing elit. Expedita obcaecati aut
+                                    aspernatur, assumenda illum, quo sequi suscipit, nisi vero nihil amet eligendi.
+                                    Pariatur adipisci, sequi rerum </p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo natus est!
+                                    Officiis deleniti voluptatem ab quisquam laboriosam ipsa natus soluta. Soluta ad
+                                    mollitia consectetur cum repellat minus magnam numquam, quo corporis eius, eos modi.
+                                    Provident, ipsa corrupti! Accusamus facere nulla tenetur sunt magni iure. Provident
+                                    explicabo quas sint tempora fuga assumenda perferendis, et minus? Itaque, molestiae
+                                    fugiat! Omnis libero saepe magnam, maiores nemo quia suscipit optio laboriosam enim
+                                    veritatis totam, recusandae mollitia cumque velit ipsum quod incidunt nam fugiat. In
+                                    dolorem officia culpa reprehenderit perferendis repudiandae dolores, facere
+                                    voluptatum eius qui ratione dolor eaque harum laudantium repellat incidunt libero?
+                                </p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat laboriosam mollitia
+                                    laudantium nesciunt molestias tempora autem culpa obcaecati, repudiandae quia, animi
+                                    vel adipisci placeat necessitatibus rem omnis quae minus facilis!</p>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto laboriosam earum
+                                    nulla? Aliquam vitae labore illo. At esse ipsa dicta. Impedit mollitia expedita eius
+                                    eaque nam illo fuga officiis autem iste corporis eligendi illum dolores quibusdam
+                                    aliquid tenetur, eos blanditiis ducimus voluptatibus deserunt cum itaque dolore?
+                                    Tempore eveniet eum optio expedita qui ratione itaque rem quisquam quas magni! Fugit
+                                    culpa molestias ab veritatis cupiditate repellat quas, ducimus voluptate eum
+                                    voluptatibus magni accusantium dignissimos, accusamus provident eius esse velit.
+                                    Veniam minima totam quod error nisi, quasi quo similique eius quaerat laudantium
+                                    ipsam adipisci, placeat laborum esse deleniti. Rem perspiciatis tempora consectetur
+                                    accusamus earum quia modi eligendi mollitia perferendis beatae reiciendis voluptates
+                                    culpa, quidem id nulla quos sequi soluta. Magnam animi, recusandae, voluptas vel
+                                    illo ab minus quod maiores sint, saepe quaerat quidem! Veniam dicta expedita odio
+                                    perferendis ratione fugit nemo, molestias reprehenderit aperiam perspiciatis modi
+                                    sint at officiis deserunt nam hic eligendi iusto reiciendis aut facere fugiat cumque
+                                    deleniti? Veniam officia mollitia pariatur ad itaque consequuntur architecto ullam
+                                    natus est, porro, ratione ducimus sunt veritatis enim voluptatibus neque nesciunt
+                                    optio magni laborum facere laudantium aspernatur ipsa placeat dolore. Impedit
+                                    incidunt architecto voluptate eaque vitae, magnam praesentium velit repudiandae
+                                    doloribus aliquid sed nam perspiciatis autem labore, doloremque rem explicabo alias
+                                    odit officiis? Dignissimos, voluptate! Maxime dignissimos doloremque corrupti modi
+                                    consequatur quis totam delectus veritatis sint nostrum. Exercitationem est dolorem
+                                    corporis rem, non ea, nobis sunt ratione neque, quibusdam libero. Ullam facilis
+                                    repellendus tempore eius beatae, dolore ut non voluptatum, quisquam architecto
+                                    molestias.</p>
+                            </div>
+                            <div class="modal-footer d-block">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Default checkbox
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- terms-condition-modal end -->
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- privacy-modal start -->
+    <section class="privacy-modal">
+        <div class="container">
+            <div class="modal-main">
+                <div class="modal fade modal-bg" id="modal-5" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Privacy Policy</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita obcaecati aut
+                                    aspernatur, assumenda illum, quo sequi suscipit, nisi vero nihil amet eligendi.
+                                    Pariatur adipisci, sequi rerum obcaecati voluptates dolore dolores?Lorem ipsum dolor
+                                    sit amet consectetur adipisicing elit. Expedita obcaecati aut
+                                    aspernatur, assumenda illum, quo sequi suscipit, nisi vero nihil amet eligendi.
+                                    Pariatur adipisci, sequi rerum </p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam explicabo natus est!
+                                    Officiis deleniti voluptatem ab quisquam laboriosam ipsa natus soluta. Soluta ad
+                                    mollitia consectetur cum repellat minus magnam numquam, quo corporis eius, eos modi.
+                                    Provident, ipsa corrupti! Accusamus facere nulla tenetur sunt magni iure. Provident
+                                    explicabo quas sint tempora fuga assumenda perferendis, et minus? Itaque, molestiae
+                                    fugiat! Omnis libero saepe magnam, maiores nemo quia suscipit optio laboriosam enim
+                                    veritatis totam, recusandae mollitia cumque velit ipsum quod incidunt nam fugiat. In
+                                    dolorem officia culpa reprehenderit perferendis repudiandae dolores, facere
+                                    voluptatum eius qui ratione dolor eaque harum laudantium repellat incidunt libero?
+                                </p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat laboriosam mollitia
+                                    laudantium nesciunt molestias tempora autem culpa obcaecati, repudiandae quia, animi
+                                    vel adipisci placeat necessitatibus rem omnis quae minus facilis!</p>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto laboriosam earum
+                                    nulla? Aliquam vitae labore illo. At esse ipsa dicta. Impedit mollitia expedita eius
+                                    eaque nam illo fuga officiis autem iste corporis eligendi illum dolores quibusdam
+                                    aliquid tenetur, eos blanditiis ducimus voluptatibus deserunt cum itaque dolore?
+                                    Tempore eveniet eum optio expedita qui ratione itaque rem quisquam quas magni! Fugit
+                                    culpa molestias ab veritatis cupiditate repellat quas, ducimus voluptate eum
+                                    voluptatibus magni accusantium dignissimos, accusamus provident eius esse velit.
+                                    Veniam minima totam quod error nisi, quasi quo similique eius quaerat laudantium
+                                    ipsam adipisci, placeat laborum esse deleniti. Rem perspiciatis tempora consectetur
+                                    accusamus earum quia modi eligendi mollitia perferendis beatae reiciendis voluptates
+                                    culpa, quidem id nulla quos sequi soluta. Magnam animi, recusandae, voluptas vel
+                                    illo ab minus quod maiores sint, saepe quaerat quidem! Veniam dicta expedita odio
+                                    perferendis ratione fugit nemo, molestias reprehenderit aperiam perspiciatis modi
+                                    sint at officiis deserunt nam hic eligendi iusto reiciendis aut facere fugiat cumque
+                                    deleniti? Veniam officia mollitia pariatur ad itaque consequuntur architecto ullam
+                                    natus est, porro, ratione ducimus sunt veritatis enim voluptatibus neque nesciunt
+                                    optio magni laborum facere laudantium aspernatur ipsa placeat dolore. Impedit
+                                    incidunt architecto voluptate eaque vitae, magnam praesentium velit repudiandae
+                                    doloribus aliquid sed nam perspiciatis autem labore, doloremque rem explicabo alias
+                                    odit officiis? Dignissimos, voluptate! Maxime dignissimos doloremque corrupti modi
+                                    consequatur quis totam delectus veritatis sint nostrum. Exercitationem est dolorem
+                                    corporis rem, non ea, nobis sunt ratione neque, quibusdam libero. Ullam facilis
+                                    repellendus tempore eius beatae, dolore ut non voluptatum, quisquam architecto
+                                    molestias.</p>
+                            </div>
+                            <div class="modal-footer d-block">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Default checkbox
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- privacy-modal end -->
 
     <!-- Main jQuery -->
     <script src="js/jquery-3.4.1.min.js"></script>
